--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <body>
     <div id="one">
       <div class="header">
-        <img src="assets/assets/logoBig.png" />
-        <h1>We Provide The Best Food At The Right Price</h1>
+        <img src="assets/assets/logoBig.png" id="logo" />
+        <h1>
+          We Provide The Best Food<br />
+          At The <strong>Right Price </strong>
+        </h1>
       </div>
       <div class="table">
         <table>
@@ -32,8 +35,8 @@
     </div>
     <div id="container">
       <div class="column1" id="drinks">
-        <img src="assets\assets\fastFood1.jpg" />
-        <img src="assets\assets\fastFood2.jpg" alt="" />
+        <img src="assets\assets\fastFood1.jpg" class="photos" />
+        <img src="assets\assets\fastFood2.jpg" alt="" / class="photos">
         <h1>Drinks</h1>
         <h2>We also produce delicious drinks</h2>
         <p>
@@ -58,8 +61,8 @@
           <button type="submit">VIEW GALLERY</button>
         </p>
 
-        <img src="assets\assets\drink1.jpg" />
-        <img src="assets\assets\drink2.jpg" />
+        <img src="assets\assets\drink1.jpg" class="photos" />
+        <img src="assets\assets\drink2.jpg" class="photos" />
       </div>
     </div>
     <div id="three">
@@ -90,8 +93,21 @@
       </div>
     </div>
     <div id="five">
-      <div class="newletter"></div>
-      <div class="footer"></div>
+      <div class="newletter">
+        <h3>Get our daily food items delivered to your mail</h3>
+        <form>
+          <input type="text" placeholder="Your email" name="email" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+      <div class="footer">
+        <h3>MENU</h3>
+        <h4>Thats what we are</h4>
+        <img />
+        <img />
+        <img />
+        <h6>2016 Menu Restaurant</h6>
+      </div>
     </div>
   </body>
 </html>
